# one-person-erp

./: .gitignore  PROGRESS.md  README.md  openapi.json  start.bat  start.sh  test_export.xlsx  test_frontend_api.js  test_rd_export.xlsx  verify_all_apis.py
backend/: .env.example  _debug_run.py  _test_export_debug.py  alembic.ini  check_annotation_data.py  check_db.py  check_tables.py  fix_todos_for_demo.py  pyproject.toml  seed_ai_suggestions.py  seed_demo_projects.py  seed_golden_path.py  seed_rd_real.py  shubiao.db  suggestions.json  v22_check_result.json
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/backups/: shubiao_before_migration_fix.meta.json
backend/migrations/: run_v22_snapshot_migration.py  v1_11_migrate.py  v1_12_migrate.py  v1_4_migrate.py  v1_5_migrate.py  v1_6_migrate.py  v1_7_migrate.py  v1_8_migrate.py  v1_9_migrate.py  v2.2_cluster_a1.sql  v2.2_cluster_a2.sql  v2.2_cluster_c.sql  v2.2_cluster_d.sql  v2_0_migrate.py  v2_2_migrate.py
backend/tests/: conftest.py  debug_test.py  e2e_helper.py  run_manual_test_plan.py  test_acceptances.py  test_agent_confirmations.py  test_agent_integration.py  test_agent_rules.py  test_agent_service.py  test_annotation_tasks.py  test_auth.py  test_backup.py  test_cashflow.py  test_change_freeze.py  test_change_orders.py  test_changelog.py  test_cluster_a1_snapshot.py  test_cluster_a2_summary.py  test_cluster_b_dashboard.py  test_cluster_c_snapshot_content.py  test_cluster_d_tools_leads.py  test_constants_alignment_v200.py  test_constants_alignment_v210.py  test_constants_v200.py  (+52 more)
(+506 files in other folders)
